Added Certificate Section

--- a/index/index.html
+++ b/index/index.html
@@ -14,6 +14,7 @@
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Levi Reyes - Portfolio</title>
+    <link rel="icon" href="Images/IconCloud.png">
 </head>
 
 <body>
@@ -32,8 +33,8 @@
                     <div class="landing-Page-Links-Container">
                         <ul class="nav-Links">
                             <li><a href="#home">Home</a></li>
-                            <li><a href="#aboutMe">About Me</a></li>
-                            <li><a href="#certificates">Certificates</a></li>
+                            <li><a href="html/aboutMePage.html">About Me</a></li>
+                            <li><a href="html/certificatePage.html">Certificates</a></li>
                             <li><a href="#contact">Contact</a></li>
                         </ul>
                     </div>
@@ -243,168 +244,28 @@
             </div>
         </main>
 
-        <!--
         <main>
-            <div id="certificates-Section" class="landing-page-main">
-                Certificates Section
-                <h4>Certificates</h4>
-                <span class="landing-page-text15"></span>
-                <div class="landing-page-cards-container">
-                    1st Cert Section
-                    <div class="place-card-container">
-                        <img alt="JavaImage" src="Images/AccentureCert.JPG" class="place-card-image" />
-                        <div class="place-card-container1">
-                            <span class="title-Card-Text">
-                                <span>Java</span>
-                            </span>
-                            <span class="description-Card-Text">
-                                <span>Java was my first introduction to anything programming & was what got me into
-                                    Software Development.
-                                    I was able to create some great basic projects but more importantly I learned key
-                                    concepts that I would use for other languages.</span>
-                            </span>
-                            <!-
-                                <a href="https://lemon-pie-recipe.vercel.app/" class="landing-page-link01" target="_blank">
-                                    <div class="solid-button-container">
-                                        <button class="outline-button-button button Button">
-                                            <span>Discover project</span></button>
-                                    </div>
-                                </a>->
-                        </div>
+            <!--This will be the links to social media-->
+            <div class="footer text-center mt-3" id="contact">
+                <footer>
+                    <h5>Get in contact with me</h5>
+                    <div id="icons">
+                        <a href="https://www.instagram.com/levi_reyes_8/" target="_blank"><i
+                                class="fa fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/levi-reyes-5328772b3/" target="_blank"><i
+                                class="fa fab fa-linkedin"></i></a>
+                        <a href="https://github.com/LeviR-UofA" target="_blank"><i class="fa fab fa-github"></i></a>
+                        <a href="mailto:levi8reyes23@arizona.edu" target="_blank"><i class="fa far fa-envelope"></i></a>
+                        <!--<a href="tel:+19282618775" target="_blank"><i class="fa fas fa-phone"></i></a>-->
+                        <a href="tel:+1928xxxxxxx" target="_blank"><i class="fa fas fa-phone"></i></a>
                     </div>
+                </footer>
 
-                    <!-Python Section->
-                    <div class="place-card-container">
-                        <img alt="PythonImage" src="Images/Image2.jpg" class="place-card-image" />
-                        <div class="place-card-container1">
-                            <span class="title-Card-Text">
-                                <span>Python</span>
-                            </span>
-                            <span class="description-Card-Text">
-                                <span>Python...</span>
-                            </span>
-                        </div>
-                    </div>
-
-                    <!-C++ Section->
-                    <div class="place-card-container">
-                        <img alt="C++Image" src="Images/Image3.jpg" class="place-card-image" />
-                        <div class="place-card-container1">
-                            <span class="title-Card-Text">
-                                <span>C++</span>
-                            </span>
-                            <span class="description-Card-Text">
-                                <span>C++...</span>
-                            </span>
-                        </div>
-                    </div>
-
-                    <!-C Section->
-                    <div class="place-card-container">
-                        <img alt="CImage" src="Images/Image4.jpg" class="place-card-image" />
-                        <div class="place-card-container1">
-                            <span class="title-Card-Text">
-                                <span>C</span>
-                            </span>
-                            <span class="description-Card-Text">
-                                <span>C...</span>
-                            </span>
-                        </div>
-                    </div>
-
-                    <!-Android Studio Section->
-                    <div class="place-card-container">
-                        <img alt="KotlinImage" src="Images/Image5.jpg" class="place-card-image" />
-                        <div class="place-card-container1">
-                            <span class="title-Card-Text">
-                                <span>Kotlin</span>
-                            </span>
-                            <span class="description-Card-Text">
-                                <span>Kotlin using Android Studio...</span>
-                            </span>
-                        </div>
-                    </div>
-
-                </div>
             </div>
         </main>
-    -->
-
-
-
-    <div id="certificates">
-        <div class="text-center">
-            <h3>Certificates:</h3>
-        </div>
-        <p>This Section is For Certificates Awarded to me.</p>
-
-        <main>
-            <!--First Row of Web Development Projects-->
-            <!--1st Certification-->
-            <div class="image-container">
-                <!--<a href="https://lemon-pie-recipe.vercel.app/" target="_blank">-->
-                <img src="Images/AccentureCert.JPG" alt="AccentureCertImage">
-                <div class="image-overlay">
-                    <p>Accenture Certificate</p>
-                </div>
-                </a>
-            </div>
-            <!--2nd Certification-->
-            <div class="image-container">
-                <!--<a href="https://tmnt-rancid-tomatoes.vercel.app/" target="_blank">-->
-                <img src="Images/GoldmanSachsCert.JPG" alt="TMNTImage">
-                <div class="image-overlay">
-                    <p>GoldmanSachs Certificate</p>
-                </div>
-                <!--</a>-->
-            </div>
-            <!--3rd Certification-->
-            <div class="image-container">
-                <!--<a href="https://vigenere-cipher-five.vercel.app/" target="_blank">-->
-                <img src="Images/TataCert.JPG" alt="CipherImage">
-                <div class="image-overlay">
-                    <p>Tata Certificate</p>
-                </div>
-                </a>
-            </div>
-
-            <!--First Certificate-->
-            <div class="image-container">
-                <!--<a href="https://lemon-pie-recipe.vercel.app/" target="_blank">-->
-                <img src="Images/UAForageCert.JPG" alt="UAForageCert">
-                <div class="image-overlay">
-                    <p>UA Forage 15 Hour Cert</p>
-                </div>
-                </a>
-                <p>This was a 15 Hour Certificate awarded to me by UA for completing the previous 3 Forage
-                    certificates.</p>
-            </div>
-            <!--Second Certificate-->
-
-
 
     </div>
-
-    <!--This will be the links to social media-->
-    <div class="footer text-center mt-3" id="contact">
-        <footer>
-            <h5>Get in contact with me</h5>
-            <div id="icons">
-                <a href="https://www.instagram.com/levi_reyes_8/" target="_blank"><i
-                        class="fa fab fa-instagram"></i></a>
-                <a href="https://www.linkedin.com/in/levi-reyes-5328772b3/" target="_blank"><i
-                        class="fa fab fa-linkedin"></i></a>
-                <a href="https://github.com/LeviR-UofA" target="_blank"><i class="fa fab fa-github"></i></a>
-                <a href="mailto:levi8reyes23@arizona.edu" target="_blank"><i class="fa far fa-envelope"></i></a>
-                <!--<a href="tel:+19282618775" target="_blank"><i class="fa fas fa-phone"></i></a>-->
-                <a href="tel:+1928xxxxxxx" target="_blank"><i class="fa fas fa-phone"></i></a>
-            </div>
-        </footer>
-
-    </div>
-
     <!--<script src="scripts.js"></script>-->
-
 </body>
 
 </html>
