--- a/index/html/aboutMePage.html
+++ b/index/html/aboutMePage.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <!--<script src="../scripts.js"></script>-->
     <title>Certificate Page</title>
     <link rel="icon" href="../Images/IconCloud.png">
 </head>
@@ -58,45 +59,7 @@
                         </div>
                     </div>
 
-                    <!--2nd Certificate-->
-                    <div class="place-card-container">
-                        <img alt="GoldmanSachCertImage" src="../Images/GoldmanSachsCert.JPG" class="place-card-image" />
-                        <div class="place-card-container1">
-                            <span class="title-Card-Text">
-                                <span>GoldmanSachs Certificate</span>
-                            </span>
-                            <span class="description-Card-Text">
-                                <span>This 5 hour Certificate was for completing a simulation of Excel Skills for a Business Job.</span>
-                            </span>
-                        </div>
-                    </div>
-
-                    <!--3rd Certificate-->
-                    <div class="place-card-container">
-                        <img alt="TataCertImage" src="../Images/TataCert.JPG" class="place-card-image" />
-                        <div class="place-card-container1">
-                            <span class="title-Card-Text">
-                                <span>Tata Certificate</span>
-                            </span>
-                            <span class="description-Card-Text">
-                                <span>This 5 hour Certificate was for Data Visualisation simulation to empower a Business with effective insights.</span>
-                            </span>
-                        </div>
-                    </div>
-
-                    <!--4th Certificate-->
-                    <div class="place-card-container">
-                        <img alt="UAForageCert" src="../Images/UAForageCert.JPG" class="place-card-image" />
-                        <div class="place-card-container1">
-                            <span class="title-Card-Text">
-                                <span>UA Forage 15 Hour Certificate</span>
-                            </span>
-                            <span class="description-Card-Text">
-                                <span>This was a 15 Hour Certificate awarded to me by the University of Arizona for completing the previous 3 Forage
-                                    certificates.</span>
-                            </span>
-                        </div>
-                    </div>
+                    
                 </div>
             </div>
         </main>
