--- a/index/index.html
+++ b/index/index.html
@@ -36,12 +36,12 @@
                             <li><a href="#home">Home</a></li>
                             <li><a href="html/aboutMePage.html">About Me</a></li>
                             <li><a href="html/certificatePage.html">Certificates</a></li>
-                            <li><a href="#contact">Contact</a></li>
+                            <li><a href="#contact-section">Contact</a></li>
                         </ul>
                     </div>
                 </div>
             </nav>
-
+            
             <!--Section for BackgroundImage & Text-->
             <div class="landing-Page-Hero">
                 <div class="landing-Page-Content-Container">
@@ -246,22 +246,23 @@
         </main>
 
         <main>
-            <!--This will be the links to social media-->
-            <div class="footer text-center mt-3" id="contact">
-                <footer>
-                    <h5>Get in contact with me</h5>
-                    <div id="icons">
-                        <a href="https://www.instagram.com/levi_reyes_8/" target="_blank"><i
-                                class="fa fab fa-instagram"></i></a>
-                        <a href="https://www.linkedin.com/in/levi-reyes-5328772b3/" target="_blank"><i
-                                class="fa fab fa-linkedin"></i></a>
-                        <a href="https://github.com/LeviR-UofA" target="_blank"><i class="fa fab fa-github"></i></a>
-                        <a href="mailto:levi8reyes23@arizona.edu" target="_blank"><i class="fa far fa-envelope"></i></a>
-                        <!--<a href="tel:+19282618775" target="_blank"><i class="fa fas fa-phone"></i></a>-->
-                        <a href="tel:+1928xxxxxxx" target="_blank"><i class="fa fas fa-phone"></i></a>
-                    </div>
-                </footer>
-
+            <div id="contact-section" class="landing-page-main">
+                <!--This will be the links to social media-->
+                <div class="footer text-center mt-3">
+                    <footer>
+                        <h5>Get in contact with me</h5>
+                        <div id="icons">
+                            <a href="https://www.instagram.com/levi_reyes_8/" target="_blank"><i
+                                    class="fa fab fa-instagram"></i></a>
+                            <a href="https://www.linkedin.com/in/levi-reyes-5328772b3/" target="_blank"><i
+                                    class="fa fab fa-linkedin"></i></a>
+                            <a href="https://github.com/LeviR-UofA" target="_blank"><i class="fa fab fa-github"></i></a>
+                            <a href="mailto:levi8reyes23@arizona.edu" target="_blank"><i class="fa far fa-envelope"></i></a>
+                            <!--<a href="tel:+19282618775" target="_blank"><i class="fa fas fa-phone"></i></a>-->
+                            <a href="tel:+1928xxxxxxx" target="_blank"><i class="fa fas fa-phone"></i></a>
+                        </div>
+                    </footer>
+                </div>
             </div>
         </main>
 
