Added an image slider

--- a/index/index.html
+++ b/index/index.html
@@ -266,6 +266,27 @@
             </div>
         </main>
 
+        <main>
+            <div id="test-section" class="landing-page-main">
+
+                <section class="container">
+                    <div class="slider-wrapper">
+                        <div class="slider">
+                            <img id="slide-1" src="Images/WalkingImage.JPG" alt="W">
+                            <img id="slide-2" src="Images/LandingPage.JPG" alt="">
+                            <img id="slide-3" src="Images/IconCloud.png" alt="">
+                        </div>
+                        <div class="slider-nav">
+                            <a href="#slide-1"></a>
+                            <a href="#slide-2"></a>
+                            <a href="#slide-3"></a>
+                        </div>
+                    </div>
+                </section>
+
+            </div>
+        </main>
+
     </div>
 </body>
 
