Added Contact Page & About Me Page

--- a/index/index.html
+++ b/index/index.html
@@ -5,15 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!--<script src="scripts.js"></script>-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
+
     <title>Levi Reyes - Portfolio</title>
     <link rel="icon" href="Images/IconCloud.png">
 </head>
@@ -28,7 +23,7 @@
                 <!--Add Items to Navbar-->
                 <img src="Images/UALogo.png" alt="UofA Logo" class="icon">
                 <h1 class="navtextleft">Levi Reyes</h1>
-                <h2 class="navtextmiddle">Organized Accomplishments</h2>
+                <h2 class="navtextmiddle">Professional Portfolio</h2>
                 <!--Creating area for Right Side Navbar-->
                 <div class="landing-Page-Right-Side">
                     <div class="landing-Page-Links-Container">
@@ -36,7 +31,7 @@
                             <li><a href="#home">Home</a></li>
                             <li><a href="html/aboutMePage.html">About Me</a></li>
                             <li><a href="html/certificatePage.html">Certificates</a></li>
-                            <li><a href="#contact-section">Contact</a></li>
+                            <li><a href="html/contactPage.html">Contact</a></li>
                         </ul>
                     </div>
                 </div>
@@ -179,13 +174,6 @@
                                     I was able to create some great basic projects but more importantly I learned key
                                     concepts that I would use for other languages.</span>
                             </span>
-                            <!--
-                                <a href="https://lemon-pie-recipe.vercel.app/" class="landing-page-link01" target="_blank">
-                                    <div class="solid-button-container">
-                                        <button class="outline-button-button button Button">
-                                            <span>Discover project</span></button>
-                                    </div>
-                                </a>-->
                         </div>
                     </div>
 
@@ -240,33 +228,12 @@
                             </span>
                         </div>
                     </div>
-
                 </div>
             </div>
         </main>
 
-        <main>
-            <div id="contact-section" class="landing-page-main">
-                <!--This will be the links to social media-->
-                <div class="footer text-center mt-3">
-                    <footer>
-                        <h5>Get in contact with me</h5>
-                        <div id="icons">
-                            <a href="https://www.instagram.com/levi_reyes_8/" target="_blank"><i
-                                    class="fa fab fa-instagram"></i></a>
-                            <a href="https://www.linkedin.com/in/levi-reyes-5328772b3/" target="_blank"><i
-                                    class="fa fab fa-linkedin"></i></a>
-                            <a href="https://github.com/LeviR-UofA" target="_blank"><i class="fa fab fa-github"></i></a>
-                            <a href="mailto:levi8reyes23@arizona.edu" target="_blank"><i class="fa far fa-envelope"></i></a>
-                            <!--<a href="tel:+19282618775" target="_blank"><i class="fa fas fa-phone"></i></a>-->
-                            <a href="tel:+1928xxxxxxx" target="_blank"><i class="fa fas fa-phone"></i></a>
-                        </div>
-                    </footer>
-                </div>
-            </div>
-        </main>
 
-        <main>
+        <!--<main>
             <div id="test-section" class="landing-page-main">
 
                 <section class="container">
@@ -285,7 +252,7 @@
                 </section>
 
             </div>
-        </main>
+        </main>-->
 
     </div>
 </body>
