--- a/index/html/certificatePage.html
+++ b/index/html/certificatePage.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <!--<script src="../scripts.js"></script>-->
     <title>Certificate Page</title>
+    <link rel="stylesheet" href="../styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
+        
+    
     <link rel="icon" href="../Images/IconCloud.png">
 </head>
 
@@ -33,16 +28,16 @@
                     <ul class="nav-Links">
                         <li><a href="../index.html">Home</a></li>
                         <li><a href="aboutMePage.html">About Me</a></li>
-                        <li><a href="#certificates">Certificates</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="certificatePage.html">Certificates</a></li>
+                        <li><a href="contactPage.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
 
         <main>
-            <div id="web-Projects-Section" class="landing-page-main">
-                <!--Web Development Projects-->
+            <div class="landing-page-main">
+                <!--Certificates-->
                 <h1>Certificates:</h1>
                 <span class="landing-page-text15">This Section is For Certificates Awarded to Me.</span>
                 <div class="landing-page-cards-container">
