Finished About Me & Contact Page

--- a/index/html/certificatePage.html
+++ b/index/html/certificatePage.html
@@ -21,7 +21,7 @@
             <!--Add Items to Navbar-->
             <img src="../Images/UALogo.png" alt="UA-Logo" class="icon">
             <h1 class="navtextleft">Levi Reyes</h1>
-            <h2 class="navtextmiddle">Organized Accomplishments</h2>
+            <h2 class="navtextmiddle">Professional Portfolio</h2>
             <!--Creating area for Right Side Navbar-->
             <div class="landing-Page-Right-Side">
                 <div class="landing-Page-Links-Container">
