--- a/index/index.html
+++ b/index/index.html
@@ -158,8 +158,8 @@
             <!--<div class="projects">-->
             <div id="projects-Section" class="landing-page-main">
                 <!--Web Development Projects-->
-                <h4>More Projects</h4>
-                <span class="landing-page-text15">Here are things I have done so far. Programming Languages</span>
+                <h4>The Beginning</h4>
+                <span class="landing-page-text15">Below are some Programming Languages I have learned & some additional information on my experiences.</span>
                 <div class="landing-page-cards-container">
                     <!--Java Section-->
                     <div class="place-card-container">
@@ -169,36 +169,9 @@
                                 <span>Java</span>
                             </span>
                             <span class="description-Card-Text">
-                                <span>Java was my first introduction to anything programming & was what got me into
-                                    Software Development.
-                                    I was able to create some great basic projects but more importantly I learned key
-                                    concepts that I would use for other languages.</span>
-                            </span>
-                        </div>
-                    </div>
-
-                    <!--Python Section-->
-                    <div class="place-card-container">
-                        <img alt="PythonImage" src="Images/Image2.jpg" class="place-card-image" />
-                        <div class="place-card-container1">
-                            <span class="title-Card-Text">
-                                <span>Python</span>
-                            </span>
-                            <span class="description-Card-Text">
-                                <span>Python...</span>
-                            </span>
-                        </div>
-                    </div>
-
-                    <!--C++ Section-->
-                    <div class="place-card-container">
-                        <img alt="C++Image" src="Images/Image3.jpg" class="place-card-image" />
-                        <div class="place-card-container1">
-                            <span class="title-Card-Text">
-                                <span>C++</span>
-                            </span>
-                            <span class="description-Card-Text">
-                                <span>C++...</span>
+                                <span>Java was my first introduction to anything programming & was what got me into Software Development. 
+                                    It is what started it all & I was able to create some great basic projects but more importantly I learned key
+                                    concepts that I would use for other languages. I enjoyed learning about programming so I pursued my career in Software Development.</span>
                             </span>
                         </div>
                     </div>
@@ -211,7 +184,40 @@
                                 <span>C</span>
                             </span>
                             <span class="description-Card-Text">
-                                <span>C...</span>
+                                <span>My first semester in UA I learned C. I got to experience using the linux command line to launch projects, & was able to learn how different
+                                    it was compared to Java. I was able to make an Adventure Game with text played on the the command line & many smaller projects. I learned about memory
+                                    declaration, which is something other languages automatically do.
+                                </span>
+                            </span>
+                        </div>
+                    </div>
+
+                    <!--C++ Section-->
+                    <div class="place-card-container">
+                        <img alt="C++Image" src="Images/Image3.jpg" class="place-card-image" />
+                        <div class="place-card-container1">
+                            <span class="title-Card-Text">
+                                <span>C++</span>
+                            </span>
+                            <span class="description-Card-Text">
+                                <span>I now was very good at working with multiple languages & C++ was very easy to grasp because the syntax was really the only difference.
+                                    I know how popular C++ is for video games & I plan to look further into it once & create a big project using this language. 
+                                </span>
+                            </span>
+                        </div>
+                    </div>
+
+                    <!--Python Section-->
+                    <div class="place-card-container">
+                        <img alt="PythonImage" src="Images/Image2.jpg" class="place-card-image" />
+                        <div class="place-card-container1">
+                            <span class="title-Card-Text">
+                                <span>Python</span>
+                            </span>
+                            <span class="description-Card-Text">
+                                <span>Python is normally what people start with becuase of how easy it is to use, but by the time I started using it I had already used more challenging
+                                    languages & Python was very straighforward learning. I have done lots of file processing & extracting data projects from cyber classes I took. 
+                                    My best project was targeting a website & browsing it for phone numbers, zip codes, & links. </span>
                             </span>
                         </div>
                     </div>
@@ -224,36 +230,16 @@
                                 <span>Kotlin</span>
                             </span>
                             <span class="description-Card-Text">
-                                <span>Kotlin using Android Studio...</span>
+                                <span>Kotlin using Android Studio introduced me to Mobile device programming, I learned the basics of Android Studio & used Kotlin to create Android
+                                    app projects. I liked creating these mobile app projects & hope to create more in the future. For my project I was working on a BMI app & completed
+                                    it so the user can put the numbers in & it stores the inputted data into the list.
+                                </span>
                             </span>
                         </div>
                     </div>
                 </div>
             </div>
         </main>
-
-
-        <!--<main>
-            <div id="test-section" class="landing-page-main">
-
-                <section class="container">
-                    <div class="slider-wrapper">
-                        <div class="slider">
-                            <img id="slide-1" src="Images/WalkingImage.JPG" alt="W">
-                            <img id="slide-2" src="Images/LandingPage.JPG" alt="">
-                            <img id="slide-3" src="Images/IconCloud.png" alt="">
-                        </div>
-                        <div class="slider-nav">
-                            <a href="#slide-1"></a>
-                            <a href="#slide-2"></a>
-                            <a href="#slide-3"></a>
-                        </div>
-                    </div>
-                </section>
-
-            </div>
-        </main>-->
-
     </div>
 </body>
 
