--- a/index/html/contactPage.html
+++ b/index/html/contactPage.html
@@ -32,8 +32,8 @@
                     <div class="des">
                         <!--This will be the links to social media-->
                         <div id="icons">
-                            <a href="https://www.instagram.com/levi_reyes_8/" target="_blank"><i
-                                    class="fa fab fa-instagram"></i></a>
+                            <!--<a href="https://www.instagram.com/levi_reyes_8/" target="_blank"><i
+                                    class="fa fab fa-instagram"></i></a>-->
                             <a href="https://www.linkedin.com/in/levi-reyes-5328772b3/" target="_blank"><i
                                     class="fa fab fa-linkedin"></i></a>
                             <a href="https://github.com/LeviR-UofA" target="_blank"><i class="fa fab fa-github"></i></a>
